--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,23 @@
         <title>Sheldon</title>
         <link rel="stylesheet" href="styles.css">
         <script src="https://kit.fontawesome.com/a79e9c589c.js" crossorigin="anonymous"></script>
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Libre+Baskerville&display=swap" rel="stylesheet">
     </head>
     <body class="chatbox">
-        <div class="chatbox__header">
-            <h4 class = "chatbox__heading">Sheldon</h4>
-            <p class = "chatbox__description"Greetings! I am Dr. Sheldon></p>
+        <div class="chatbox__sidebar">
+            <div class="heading"><h4 class = "chatbox__heading">Sheldon</h4></div>
+            <div class="description"><p class = "chatbox__description">Greetings! How may I assist you today? As the smartest person on Earth, I possess the knowledge and expertise to help you create an outstanding portfolio. Let me guide you in crafting a portfolio that truly shines.</p></div>
+            <div class="commands">
+                <p>Try Asking</p>
+                <ul>
+                    <li>How to build a resume?</li>
+                    <li>Are projects important?</li>
+                    <li>What is github?</li>
+                    <li>How to make a linkedIn</li>
+                </ul>
+            </div>
         </div>
         <div class="chatbox__messages">
             <div></div>
